# caracal

./: .dockerignore  .env.example  .env.v03.example  .gitignore  .pnpmfile.cjs  .prettierignore  .trivyignore.yaml  404.html  ABBREVIATIONS.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_GUIDE_V03.md  Dockerfile.cli  Dockerfile.consumer  Dockerfile.gateway  Dockerfile.mcp  ENTERPRISE.LICENSE  INCIDENT_RESPONSE.md  KAFKA_CLI.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PACKAGING.md  PRODUCTION_GUIDE_V03.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TASK_1_SUMMARY.md  alembic.ini  all_unit_tests.txt  build_dist.py  caracal.toml.example  check_distributions.py  codecov.yml  config.example.yaml  config.v0.3.example.yaml  create_distribution.py  docker-compose.gateway.yml  docker-compose.v03.yml  (+44 more)
.changeset/: config.json  instructions.md
.githooks/: instructions.md  pre-commit
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  MAINTAINERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  dependabot.yml  funding.json
ai/: index.html
apps/: instructions.md
caracal/: __init__.py  _version.py  exceptions.py  logging_config.py  pathing.py
caracal-node/: package-lock.json  package.json
caracalCore/: index.html
caracalEnterprise/: index.html
caracalFlow/: index.html
deploy/: README.md  docker-compose.image.yml  docker-compose.yml  instructions.md
docs/: DOCKER_COMPOSE_QUICKSTART.md  DOCKER_MCP_QUICKSTART.md  DOCKER_QUICKSTART.md  KUBERNETES_QUICKSTART.md  OPERATIONAL_RUNBOOK.md  README.md  RELEASE_PREPARATION_SUMMARY.md  VERSION_MANAGEMENT.md  astro.config.mjs  docusaurus.config.ts  instructions.md  knip.json  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts  versioning.mjs  versions.json
enterprise/: index.html
examples/: __init__.py  authority_client_demo.py  circuit_breaker_demo.py  database_retry_demo.py  gateway_proxy_demo.py  instructions.md  mcp_adapter_demo.py  mcp_decorator_demo.py  metrics_demo.py  monitoring_demo.py  policy_cache_demo.py  sdk_client_demo.py  spending_aggregation_demo.py  structured_logging_demo.py  version_checker_demo.py
examples/lynxCapital/_mock/sdk/lynx_sdk_tax/: pyproject.toml
examples/lynxCapital/_mock/sdk/terra_tax/: pyproject.toml
faq/: index.html
governance/: GOVERNANCE.md  INCIDENT_RESPONSE.md  THREAT_MODEL.md
infra/: instructions.md
k8s/: MANIFEST_INDEX.md  README.md  configmap.yaml  deploy.sh  gateway-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  mcp-adapter-deployment.yaml  namespace.yaml  pdb.yaml  postgres-statefulset.yaml  secret.yaml  servicemonitor.yaml
manage/: index.html
markdown-page/: index.html
open-source/: index.html
playbooks/: README  instructions.md
reference/: index.html
releases/: instructions.md
resources/: index.html
schemas/: metering-event.avsc
scripts/: README.md  authorizeReleaseActor.mjs  backup-postgresql.sh  build-images.sh  checkOciVersions.mjs  checkReleaseVersions.mjs  checkStyle.mjs  checkStyle.sh  detect_py_cycles.py  dispatchPypiRelease.mjs  docsVersion.mjs  finalizeImageDigests.mjs  finalizeOciDigests.mjs  finalizeReleaseManifest.mjs  generate-certs.sh  generateReleaseRecord.mjs  hardcut_forbidden_marker_scan.py  hardcut_migration_safety_snapshot.py  instructions.md  oss_separation_scan.py  partition_authority_ledger.py  postReleaseValidate.sh  prerelease.mjs  prerelease.sh  publishNpm.sh  publishOciRelease.mjs  publishPackages.sh  publishPypi.sh  publishPypiRequirements.in  rc.mjs  rc.sh  release.mjs  release.sh  releaseInventory.mjs  releasePlan.mjs  releaseTags.mjs  restore-postgresql.sh  runGoSourceTests.mjs  runGoTests.mjs  runPythonTests.mjs  (+22 more)
scripts/placeholder-packages/caracal-agents/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-agents/src/caracal_agents/: __init__.py
scripts/placeholder-packages/caracal-broker/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-broker/src/caracal_broker/: __init__.py
scripts/placeholder-packages/caracal-enterprise/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-enterprise/src/caracal_enterprise/: __init__.py
scripts/placeholder-packages/caracal-mcp/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-mcp/src/caracal_mcp/: __init__.py
scripts/placeholder-packages/caracal-run/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-run/src/caracal_run/: __init__.py
scripts/placeholder-packages/caracal-security/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-security/src/caracal_security/: __init__.py
scripts/placeholder-packages/caracal-server/: README.md  pyproject.toml
scripts/placeholder-packages/caracal-server/src/caracal_server/: __init__.py
sdk/: .gitignore  instructions.md
sdk/python-sdk/: instructions.md  pyproject.toml
sdk/python-sdk/src/caracal_sdk/: README.md  __init__.py  _compat.py  agents.py  ais.py  async_authority_client.py  authority_client.py  client.py  context.py  delegation.py  gateway.py  hooks.py  json_types.py  ledger.py  management.py  mandates.py  migration.py  principals.py  runtime_surface.py  tools.py  transport_types.py
sdk/python-sdk/src/caracal_sdk/adapters/: __init__.py  base.py  http.py  mock.py  websocket.py
sdk/python-sdk/src/caracal_sdk/enterprise/: __init__.py  analytics.py  compliance.py  exceptions.py  license.py  sso.py  sync.py  workflows.py
sdk/python-sdk/src/caracal_sdk/enterprise/regulated/: __init__.py  finance.py  healthcare.py
search/: index.html
services/: instructions.md
tests/: QUICK_START.md  README.md  VALIDATION.md  __init__.py  _caracal_source.py  all_tests_results.txt  conftest.py  go.sum  instructions.md  run_local_ci_test.py  simulate_ci.py  test_crypto_comprehensive.py  test_crypto_implementation.py  test_crypto_simple.py  test_decorator_simple.py  test_dist_install.py  test_installation.py  test_performance_optimizations.py  test_simple.py  validate_cicd.py  validate_execution.py  validate_structure.py  verify_dlq.py  verify_gateway.py  verify_mandate_manager.py  verify_test_structure.py
(+3569 files in other folders)
