[project]
name = "lynx-sdk-tax"
version = "0.1.3rc1"
description = "Internal tax-rules SDK shim used by LynxCapital"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28", "idna>=3.15"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
